# Hotel-Mania

./: .gitignore  README.md  pyproject.toml  pytest.ini
commons/: admin.py  models.py
commons/api/: serializers.py  views.py
commons/migrations/: 0001_initial.py  0002_auto_20210518_0150.py  0002_initial.py  0003_certificationtype_company.py  0004_auto_20210607_0453.py  0005_alter_company_logo.py
config/: authentication.py  hosts.py  middleware.py  schema.py  settings.py  urls.py
config/urls/: __init__.py  common.py  dj-admin.py  hotel.py  room.py
core/management/commands/: mega_seed.py
hotels/: admin.py  models.py  permissions.py  schema.py  serializers.py  urls.py  views.py
hotels/api/serializers/: serializers.py
hotels/api/urls/: hotel_specification.py  hotel_specification_value.py  hotel_types.py  (+3 more)
hotels/migrations/: 0001_initial.py  0002_auto_20210524_1233.py  0002_initial.py  0003_alter_hoteladdress_hotel.py
rooms/: admin.py  models.py  schema.py  serializers.py  types.py  urls.py  views.py
rooms/api/: serializers.py  views.py
rooms/migrations/: 0001_initial.py  0002_rename_name_roomservice_service_name.py  0003_alter_roomservice_service_type.py  0003_auto_20210516_0546.py  0004_auto_20210608_0537.py  0004_auto_20210611_0404.py  0005_alter_roomservice_service_type.py  0005_remove_room_address.py  0006_alter_room_name.py  0007_alter_room_name.py
users/: admin.py  models.py  mutations.py  queries.py  schema.py  serializer.py  types.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_auto_20210516_0545.py  0003_alter_user_id.py
(+1 files in other folders)
